build_error_3.txt
    Checking agn v0.1.0 (/Users/hw24a094/ludus/agn)
warning: unused imports: `Duration` and `Instant`
 --> src/interpreter.rs:9:16
  |
9 | use web_time::{Duration, Instant};
  |                ^^^^^^^^  ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `tokio::sync::Mutex`
  --> src/interpreter.rs:22:5
   |
22 | use tokio::sync::Mutex;
   |     ^^^^^^^^^^^^^^^^^^

warning: unused import: `std::env`
 --> src/ai_runtime.rs:4:5
  |
4 | use std::env;
  |     ^^^^^^^^

warning: unused import: `Condition`
 --> src/web_generator.rs:4:21
  |
4 | use crate::parser::{Condition, Expr, Program, Statement};
  |                     ^^^^^^^^^

warning: unused import: `crate::symbol_table::Value`
 --> src/graphics/renderer.rs:4:5
  |
4 | use crate::symbol_table::Value;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused import: `winit::platform::web::WindowExtWebSys`
  --> src/lib.rs:22:5
   |
22 | use winit::platform::web::WindowExtWebSys;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unreachable pattern
   --> src/interpreter.rs:453:17
    |
376 |                 Statement::AnimateStatement { duration, target, property, value } => {
    |                 ----------------------------------------------------------------- matches all the relevant values
...
453 |                 Statement::AnimateStatement { duration, target, property, value } => {
    |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ no value can reach this
    |
    = note: `#[warn(unreachable_patterns)]` (part of `#[warn(unused)]`) on by default

error[E0599]: no variant named `Animate` found for enum `Statement`
   --> src/parser.rs:778:23
    |
 24 | pub enum Statement {
    | ------------------ variant `Animate` not found here
...
778 |         Ok(Statement::Animate { duration, property, target_value })
    |                       ^^^^^^^ variant not found in `Statement`

warning: unused variable: `children`
   --> src/interpreter.rs:123:61
    |
123 | ...                   if let Some(Value::Component { children, .. }) = table.lookup(parent_name).cloned().as_mut() {
    |                                                      ^^^^^^^^ help: try ignoring the field: `children: _`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `children`
   --> src/interpreter.rs:154:57
    |
154 |                          if let Some(Value::Component { children, .. }) = table.lookup(parent_name).cloned().as_mut() {
    |                                                         ^^^^^^^^ help: try ignoring the field: `children: _`

warning: unused variable: `handle`
   --> src/interpreter.rs:288:25
    |
288 |                     let handle = spawn_async(async move {
    |                         ^^^^^^ help: if this is intentional, prefix it with an underscore: `_handle`

warning: unused variable: `const_name`
   --> src/codegen.rs:132:21
    |
132 |                 let const_name = self.add_string_constant(s);
    |                     ^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_const_name`

warning: unused variable: `output_name`
   --> src/compiler.rs:137:62
    |
137 |     fn compile_wasm(&self, program: &crate::parser::Program, output_name: &str) -> Result<CompileResult, CompileError> {
    |                                                              ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_output_name`

warning: unreachable pattern
   --> src/graphics/state.rs:520:17
    |
477 |                 Value::Image(path) => {
    |                 ------------------ matches all the relevant values
...
520 |                 Value::Image(_) => {
    |                 ^^^^^^^^^^^^^^^ no value can reach this

warning: unused variable: `s`
   --> src/graphics/state.rs:524:31
    |
524 |                 Value::String(s) => {
    |                               ^ help: if this is intentional, prefix it with an underscore: `_s`

warning: unused variable: `index_count`
   --> src/graphics/state.rs:533:37
    |
533 |         let (vertex_buf, index_buf, index_count) = self.renderer.get_buffers(&self.device);
    |                                     ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_index_count`

warning: unused variable: `end_indices`
   --> src/graphics/renderer.rs:129:13
    |
129 |         let end_indices = self.geometry.indices.len() as u32;
    |             ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_end_indices`

warning: unused variable: `end_indices`
   --> src/graphics/renderer.rs:254:13
    |
254 |         let end_indices = self.geometry.indices.len() as u32;
    |             ^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_end_indices`

For more information about this error, try `rustc --explain E0599`.
warning: `agn` (lib) generated 17 warnings
error: could not compile `agn` (lib) due to 1 previous error; 17 warnings emitted
